# Micro-ML

./: README.md
lower_machine/: CMakeLists.txt  prj.conf
lower_machine/boards/: mimxrt1060_evk.overlay
lower_machine/drivers/: README.md
lower_machine/drivers/cirrus/wm89xx/: Kconfig
lower_machine/src/include/auxiliary/: basic.h
lower_machine/src/include/config/: image.h  micro_log.h  system.h  tfmicro.h  uart.h
lower_machine/src/include/micro_log/: micro_log.h
lower_machine/src/include/tfmicro/: tf2d.h  tfmicro.h  tools.h
lower_machine/src/include/uart/: uart.h
lower_machine/src/kernel/: main.cc
lower_machine/src/lib/tf-micro/: micro_interpreter.cc_modify
lower_machine/src/modules/micro_log/: micro_log.cc
lower_machine/src/modules/tfmicro/: tf2d.cc  tfmicro.cc
lower_machine/src/modules/uart/: uart.cc
md_image/: demo.jfif  ioevent.jfif  tf.jfif
model/cifar10/: cifar10.tflite  config.conf
model/face/: config.conf
model/flower/: config.conf  flower.oneAPI
model/people/: config.conf
model/speech/: config.conf
os/tsos/linux/: .Makefile.swp  .config  .depend  CMakeLists.txt  Configure  Makefile  config.in
os/tsos/linux/fs/: .depend  Makefile
os/tsos/linux/ibcs/: .depend  Makefile
os/tsos/linux/ipc/: .depend  (+1 more)
project/verification/v1/: README.md  ags.h  mainwindow.cpp  upper_computer.pro  waiting.cpp
project/verification/v2/: CMakeLists.txt  README.md  getopt.h  main.cpp
project/verification/v3/: README.md  package-lock.json  package.json
upper_computer/: README.md  main.cpp  mainwindow.h  mainwindow.ui  waiting.h  waiting.ui
(+99 files in other folders)
